# trading-bot

./: CHANGELOG.md  LICENSE  README.md  config.ini  pyproject.toml  requirements.txt
dags/: cannary.py  signal_performance_report.py  upcoming_ipo.py
data/: portfolio_returns.csv2
notebooks/: BIAS_Report.ipynb  Interactive Broker Demo.ipynb  Long Term Portfolio.ipynb  Option Strategy Example.ipynb  Patience.ipynb  Portfolio.ipynb  Signal Combination.ipynb  Signal.ipynb
scripts/: .rsync_ignore  gen_return.py  sync.sh
src/: cli.py  config.py  constant.py  enum.py  exceptions.py
src/analytics/: __init__.py  pairs.txt  performance.py  rebal.py  robust.jl  signal.py  signal_combination.py  ts.py
src/broker/: alpaca.py  ib.py
src/data/: __init__.py  base.py  data_loader.py  fetcher.py  ipo.py  option.py  orats.py  polygon.py  quality.py  yahoo.py
src/execution/: README.md  __init__.py  alert.py  alpaca_executor.py  analysis.py  base_executor.py  exceptions.py  exec_quality.py  executor.py  helper.py  ib_executor.py  interactive_broker.py  marketdata.py  model.py  option_executor.py  option_strategy.py  order.py  plotting.py  portfolio.py  recorder.py  report.py  signal.py  signal_executor.py  utils.py
src/intraday/: marketdata.py  signals.py  trader.py
src/model/: quote.py  trade.py
src/signals/: optimizer.py
src/storage/: __init__.py  base.py  google.py  influxdb.py  local.py
src/utils/: __init__.py  batch.py  data_loader.py  email.py  fe.py  file.py  jupyter.py  logger.py  opsgenie.py  (+4 more)
tests/: README.md  conftest.py  test_cli.py  test_signal.py
(+32 files in other folders)
